# ophyd-websocket

./: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
react_examples/: useOphydSocket.ts
server/: device_registry.py  ophyd_ws_server.py  server.py
server/examples/: example_startup.py
server/routers/: camera_socket.py  core_api copy.py  core_api.py  device_socket.py  pv_socket.py  qs_console_socket.py
server/utils/: __init__.py  device_registry.py  queue_server_utils.py
src/: pytest.ini
src/ophyd_websocket/: device_registry.py  queue_safety.py  server.py
src/ophyd_websocket/routers/: core_api.py  device_socket.py  pv_socket.py
src/tests/: __init__.py  conftest.py  test_device_registry.py  test_integration.py  test_ioc.py  test_smoke.py  test_startup.py  test_websockets.py
tests/: conftest.py  test_device_registry.py  test_integration.py  test_ioc.py  test_smoke.py  test_websockets.py
