[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ophyd-websocket"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyepics",
    "ophyd>=1.9.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.22.0",
    "websockets>=11.0",
    "numpy>=2.2.6",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "pyzmq>=25.0.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ophyd_websocket"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pytest-mock>=3.10.0",
    "caproto>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore::pytest.PytestCollectionWarning",
]
addopts = "--disable-warnings"
